# TinyPKI

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
build_local/: CMakeCache.txt
include/: sm2_auth.h  sm2_implicit_cert.h  sm2_pki_client.h  sm2_pki_service.h  sm2_pki_transparency.h  sm2_pki_types.h  sm2_revocation.h  sm2_tinypki.h
src/: main.c  sm2_implicit_cert.c  test_suite.c
src/app/: bench_capability_suite.c  bench_network_overhead.c  demo_test_cert_flow.c  demo_test_merkle_flow.c  main.c
src/auth/: auth.c  auth_internal.h
src/ecqv/: ecqv.c
src/pki/: client.c  crypto.c  crypto_internal.h  pki_internal.h  rev_bridge.c  service.c
src/revoke/: merkle.c  merkle_cbor.c  merkle_epoch.c  merkle_internal.h  revoke.c  revoke_internal.h  revoke_sync.c
tests/: test_auth.c  test_auth_core.inc  test_auth_policy.inc  test_common.h  test_ecqv.c  test_merkle.c  test_merkle_advanced.inc  test_merkle_core.inc  test_merkle_negative.inc  test_pki.c  test_pki_flow.inc  test_pki_internal.c  test_pki_revocation.inc  test_pki_security.inc  test_revoke_bft.c  test_revoke_core.c  test_revoke_sync.c
tools/: check_format.ps1  check_format.sh  fill_copyright_application.ps1  format.ps1  format.sh  generate_softcopy_design_doc.ps1  generate_softcopy_source_doc.ps1  softcopy_design_doc_body.md
